--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -200,6 +200,18 @@
     "FinalStarshipDetails.traits.instruction": "You may now define additional Traits for your starship. Your starship already has these traits:",
     "FinalStarshipDetails.traits.note": "Your GM may allow you to pick additional traits that describe your vessel. Examples include: Prototype, Legacy Vessel, Renowned and Long-Serving.",
 
+    "FinishPage.instruction": "Your character is finished. Export your character to PDF, or use the \"Profile\" option in the left-hand bar to see the chosen options and transcribe them manually on to a character sheet.",
+
+    "FinishPage.rank.instruction": "Select your character's rank.",
+
+    "FinishPage.trait.preamble_one": "Your character automatically has the following trait:",
+    "FinishPage.trait.preamble_other": "Your character automatically has the following traits:",
+    "FinishPage.trait.instruction": "You can specify additional traits, here.",
+
+    "FinishPage.role.instruction": "Select character's role and the ship on which they serve. This choice will be based on your highest discipline(s). The most suitable choice will appear on top, while the other options will be available as well in case you want to create a different character.",
+
+    "FinishPage.values.instruction": "If you did not define your values during character creation, or if you want to change any of them, now is the time to think about the values your character goes by.",
+
     "FinishPage.job.example": "e.g. Junior Engineer",
 
     "MilestonePage.instruction": "Select what type of modification you want to apply for this milestone.",
@@ -447,6 +459,7 @@
     "Construct.other.training": "Training",
     "Construct.other.trait": "Trait",
     "Construct.other.traits": "Traits",
+    "Construct.other.additionalTraits": "Additional Traits",
     "Construct.other.upbringing": "Upbringing",
     "Construct.other.value": "Value",
     "Construct.other.values": "Values",
@@ -552,63 +565,85 @@
 
     "CareerEvent.common.1.name": "Ship Destroyed",
     "CareerEvent.common.1.description": "The ship the character was serving on was lost, destroyed during a mission, and the character was one of the few who survived.\n\n- What was the ship’s mission? Was it something routine that went horribly wrong, or was it something perilous? What destroyed the ship?\n- How many survivors were there? How long did it take before they were recovered?",
+    "CareerEvent.common.1.focusSuggestion": "The character gains a Focus, which should reflect the character’s experiences. Examples include: Extra Vehicular Operations, Small Craft, or Survival.",
 
     "CareerEvent.common.2.name": "Death of a Friend",
     "CareerEvent.common.2.description": "During an important mission, one of the character’s friends was killed in action.\n\n- Who was the friend? How did the character know them?\n- What was the mission? How did the friend die? Who was to blame?",
+    "CareerEvent.common.2.focusSuggestion": "The character gains a Focus, which should reflect the character’s experiences. Examples include: Counselling, but it may also represent a skill or pursuit the character takes up in their fallen friend’s memory or to prevent the same thing happening in the future.",
 
     "CareerEvent.common.3.name": "Lauded by Another Culture",
     "CareerEvent.common.3.description": "The character was involved in a mission that earned the official praise of a non-Federation culture; they are now considered to be a friend to that people.\n\n- What culture was aided by this mission? What was the mission? Why was it particularly praiseworthy?\n- Does the character have any friends or contacts in that culture who can be contacted for help?",
+    "CareerEvent.common.3.focusSuggestion": "The character gains a Focus, which should reflect the character’s experience with that culture. A Focus of X Culture, replacing the X with the name of that culture, is a good example, as would any that represent skills or techniques specific to that culture.",
+    "CareerEvent.common.3.traitDescription": "The character may gain a Trait, which should reflect this event. A good example might be Friend to the X, replacing the X with the name of the culture. This reflects the character’s renown amongst that culture, and the benefits and problems such status brings.",
 
     "CareerEvent.common.4.name": "Negotiate a Treaty",
     "CareerEvent.common.4.description": "The character was part of a delegation that helped negotiate a treaty, agreement, or alliance with a culture outside the Federation. What culture was the treaty with? What was it for?",
+    "CareerEvent.common.4.focusSuggestion": "The character gains a Focus, which should reflect the character’s experience with the negotiations. Examples include: Diplomacy, Negotiation, or Galactic Politics.",
 
     "CareerEvent.common.5.name": "Required to Take Command",
     "CareerEvent.common.5.description": "During a mission, a crisis left the mission’s leader unable to lead. This required the character to take command, something they may not have been prepared for.\n\n- What was the mission? What went wrong?\n- Was the mission successful despite the loss of the leader?",
+    "CareerEvent.common.5.focusSuggestion": "The character gains a Focus, which should reflect the character’s experiences during the crisis. Examples include: Lead by Example, Inspiration, or Composure.",
 
     "CareerEvent.common.6.name": "Encounter with a Truly Alien Being",
     "CareerEvent.common.6.description": "The character encountered a life-form which is truly alien, something barely within the comprehension of humanoid life. It might have been some godlike entity, or a creature that swims through space, but whatever it was, it was not life as we know it.\n\n- What kind of creature was it? What did the character learn from the experience?\n- What happened to the creature afterwards? Has it been seen again?",
+    "CareerEvent.common.6.focusSuggestion": "The character gains a Focus, which should reflect the character’s experiences with the entity. Examples include: Empathy, Philosophy, Xenobiology.",
 
     "CareerEvent.common.7.name": "Serious Injury",
     "CareerEvent.common.7.description": "The character was seriously hurt, and needed to spend a considerable amount of time recovering.\n\n- What was happening when the character was injured? Who was responsible?\n- What did the recovery entail? Did the character need a prosthesis or cybernetic afterwards?",
+    "CareerEvent.common.7.focusSuggestion": "The character gains a Focus, which should reflect the circumstances of the character’s injury, something that helped them through recovery, or something they took up after recovering. Examples include: Athletics, Art, or Philosophy.",
+    "CareerEvent.common.7.traitDescription": "The character may gain a Trait, which should reflect some lasting effect of the character’s injury or the way they recovered. Examples include: Prosthetic Implant, or some form of disability.",
 
     "CareerEvent.common.8.name": "Conflict with a Hostile Culture",
     "CareerEvent.common.8.description": "The character was involved in a major battle with a hostile force, and is unlikely to forget the experience.\n\n- Who was the enemy in this battle? Why did the battle occur? Was it fought in space, on the ground, or both?\n- What did the character have to do to survive? Was the battle won or lost?",
+    "CareerEvent.common.8.focusSuggestion": "The character gains a Focus, which should reflect skills they honed during the fighting. Examples include: Hand Phasers, Hand-to-Hand Combat, or Shipboard Tactical Systems.",
 
     "CareerEvent.common.9.name": "Mentored",
     "CareerEvent.common.9.description": "A highly-respected officer took notice of the character’s career. For a time, the character served as the officer’s pilot and aide, gaining the benefit of the officer’s experiences and lessons. Who was the officer? Does the officer remain a contact or even friend of the character?",
+    "CareerEvent.common.9.focusSuggestion": "The character gains a Focus, reflecting the lessons learned. Examples include: Composure or Etiquette, though any Focus reflecting the officer’s specialities would be fitting.",
 
     "CareerEvent.common.10.name": "Transporter Accident",
     "CareerEvent.common.10.description": "The character suffered some manner of strange accident while using a Transporter.\n\n- What happened to the character during the accident? Were there any lasting repercussions?\n- How does the character feel about Transporters now?",
+    "CareerEvent.common.10.focusSuggestion": "The character gains a Focus, which should reflect something they learned either because of the accident, or in the aftermath. Examples include: Transporters & Replicators, Small Craft, or Quantum Mechanics.",
 
     "CareerEvent.common.11.name": "Dealing with a Plague",
     "CareerEvent.common.11.description": "The character’s starship was assigned to provide aid to a world deal with an epidemic.\n\n- What was the disease that was running rampant? What planet it was affecting?\n- Did the character deal directly with the sick? How was the character involved?",
+    "CareerEvent.common.11.focusSuggestion": "The character gains a Focus, which should reflect how they helped during the crisis. Examples include: Infectious Diseases, Emergency Medicine, or Triage.",
 
     "CareerEvent.common.12.name": "Betrayed Ideals for a Superior",
     "CareerEvent.common.12.description": "The character was placed in a situation where they had to choose between a trusted superior and their own ideals, and chose to follow the superior.\n\n- Who was the superior? What did they ask the character to do? How does the character feel now?\n- What were the repercussions of this? Are the details of this event on record? Was the character right?",
+    "CareerEvent.common.12.focusSuggestion": "The character gains a Focus, reflecting the event and its aftermath. Examples include: Persuasion, Inspiration, Investigation.",
 
     "CareerEvent.common.13.name": "Called Out a Superior",
     "CareerEvent.common.13.description": "The character was placed in a situation where they had to choose between a trusted superior and their own ideals, and chose to follow their ideals.\n\n- Who was the superior? What did they ask the character to do? How does the character feel now?\n- What were the repercussions of this? Are the details of this event on record? Was the character right?",
+    "CareerEvent.common.13.focusSuggestion": "The character gains a Focus, reflecting the event and its aftermath. Examples include: Uniform Code of Justice, History, or Starfleet Protocol.",
 
     "CareerEvent.common.14.name": "New Battle Strategy",
     "CareerEvent.common.14.description": "In combat with a hostile force, the character devised a new strategy or tactic.\n\n- Who was the battle against?\n- Was it in space or on the ground? What was the strategy devised?",
+    "CareerEvent.common.14.focusSuggestion": "The character gains a Focus, reflecting their decisive battlefield leadership. Examples include: Combat Tactics, Hazard Awareness, or Lead by Example.",
 
     "CareerEvent.common.15.name": "Learns Unique Language",
     "CareerEvent.common.15.description": "The character encounters a species with an unusual form of communication, and learns to communicate with them.\n\n- Who were the aliens the character encountered? Was the encounter tense, or peaceful?\n- What method of communication do the aliens use? How did the character learn it?",
+    "CareerEvent.common.15.focusSuggestion": "The character gains a Focus, reflecting what the character learned from the event. Examples include: Linguistics, Cultural Studies, or Negotiations.",
 
     "CareerEvent.common.16.name": "Discovers an Artifact",
     "CareerEvent.common.16.description": "During a survey mission, the character discovered a device or fragment of technology from a now-extinct civilization.\n\n- What did this piece of technology do? Does it still function now?\n- What is known about the civilization that made it?",
+    "CareerEvent.common.16.focusSuggestion": "The character gains a Focus, reflecting the event and its aftermath. Examples include: Ancient Technology, Computers, Reverse Engineering.",
 
     "CareerEvent.common.17.name": "Special Commendation",
     "CareerEvent.common.17.description": "During a crisis, the character saved the lives of several colleagues, helping them to safety.This earned the character a special commendation.\n\n- What was the crisis? Why was the mission in danger?\n- What were the repercussions of this? Are the details of this event on record?",
+    "CareerEvent.common.17.focusSuggestion": "The character gains a Focus, reflecting the event and its aftermath. Examples include: Athletics, Survival, or Emergency Medicine.",
 
     "CareerEvent.common.18.name": "Solved an Engineering Crisis",
     "CareerEvent.common.18.description": "The character was instrumental in ending a crisis caused by malfunctioning technology, and saved many lives in the process. What technology had malfunctioned, and why was it dangerous? How did the character solve the problem?",
+    "CareerEvent.common.18.focusSuggestion": "The character gains a Focus, reflecting the technology involved in the event. Examples include: Electro-Plasma Power Systems, Fusion Reactors, or Warp Engines.",
 
     "CareerEvent.common.19.name": "Breakthrough or Invention",
     "CareerEvent.common.19.description": "The character made an important technological discovery, devised a new way of using a particular technology, or invented some new technology that will be invaluable in the future. What was the discovery, breakthrough, or invention? How will it be useful?",
+    "CareerEvent.common.19.focusSuggestion": "The character gains a Focus, reflecting the character’s achievement. Examples include: Experimental Technology, Invention, or Improvisation.",
 
     "CareerEvent.common.20.name": "First Contact",
     "CareerEvent.common.20.description": "The character was chosen to be involved in one of the most important of Starfleet’s missions: first contact with another culture. What culture did the character make first contact with? Did the mission go well?",
+    "CareerEvent.common.20.focusSuggestion": "The character gains a Focus, reflecting the nature of the mission. Examples include: Cultural Studies, Diplomacy, or Infiltration.",
 
     "CareerEvent.unofficial.21.name": "Advanced Tactical Training",
     "CareerEvent.unofficial.21.description": "The character took a specialized course in advanced tactical and intelligence techniques.\n\n- Where was the course taught? Who recommended the character for the course?\n- Did the character pass the course? How did the character rank in the various subjects?",
@@ -1160,6 +1195,44 @@
 
     "Rank.crewman3rdClass.name": "Crewman 3rd Class",
     "Rank.crewman3rdClass.abbrev": "Crew.",
+
+    "Role.commandingOfficer": "Commanding Officer",
+
+    "Role.commandingOfficer.description": "The captain. Even if the commanding officer does not hold the rank of captain, they will be referred to as captain by their subordinates. Every ship must have a commanding officer.",
+
+    "Role.executiveOfficer": "Executive Officer",
+
+    "Role.executiveOfficer.description": "Second-in-Command. The executive officer is the captain’s chief advisor, and takes command in situations where the captain is unable to. If a ship does not have a dedicated executive officer, an officer in another role should be noted as second-in-command, but they will not gain the benefits of this role.",
+
+    "Role.operationsManager": "Operations Manager",
+
+    "Role.operationsManager.description": "The operations manager manages and oversees all technical operations aboard or involving the ship, normally from the Operations station on the Bridge, or in conjunction with the chief engineer (on smaller ships, one officer may fill both roles). This often entails taking on the duties of a science officer, if there is no dedicated science officer in the senior staff.",
+
+    "Role.chiefEngineer": "Chief Engineer",
+
+    "Role.chiefEngineer.description": "The chief engineer is responsible for ensuring that the ship remains operational and functional, and commands the engineering department aboard the ship.",
+
+    "Role.chiefOfSecurity": "Chief of Security",
+
+    "Role.chiefOfSecurity.description": "The chief of security oversees the ship’s security department, and is responsible for ensuring the safety of the ship and crew during missions, for the investigation of disciplinary and criminal matters, and for overseeing the protection of important persons aboard the ship. On many ships, the chief of security operates from the Tactical station on the bridge.",
+
+    "Role.chiefMedicalOfficer": "Chief Medical Officer",
+
+    "Role.chiefMedicalOfficer.description": "The chief medical officer, also known as ship’s surgeon, or ship’s doctor, is responsible for the health and wellbeing of the crew and other persons aboard the ship, and leads the ship’s medical department. A chief medical officer can order, and countermand the orders of, senior officers where matters of that officer’s health are concerned.",
+
+    "Role.scienceOfficer": "Science Officer",
+
+    "Role.scienceOfficer.description": "A science officer is responsible for advising the commanding officer of all matters scientific, providing hypotheses in matters concerning the unknown. Not all ships have a dedicated science officer within the senior staff, often having the operations manager take on these duties.",
+
+    "Role.flightController": "Flight Controller",
+
+    "Role.flightController.description": "Not a typical senior staff role, some captains, particularly those operating in uncharted space, choose the most senior helmsman or flight control officer to serve as senior staff as well.",
+
+    "Role.shipsCounselor": "Ship's Counselor",
+    "Role.shipsCounselor,description": "On larger ships and starbases, it’s common to have personnel dedicated to the mental soak. Some captains regard them as valuable advisors, as their training covers both culture and psychology, making them exceptionally good at reading the moods and intentions of others.",
+    "Role.communicationsOfficer": "Communications Officer",
+
+    "Role.communicationsOfficer.description": "More common in the earlier days of Starfleet, dedicated communications officers are typically skilled in linguistics and cryptography, and aided with advanced translation and decryption technologies, and thus valuable during encounters with both new cultures, and with hostile ones.",
 
     "ShipBuildType.pod.name": "Pod",
 
@@ -1793,6 +1866,10 @@
     "Talent.parentFigure": "Parent Figure",
 
     "Talent.parentFigure.description": "You have a large family, with many children, nieces, and nephews, and you’ve learned how to coordinate even the most unruly and fractious of groups when necessary. When attempting or assisting a Task, and two or more other characters are involved in the Task, the first Complication generated on the Task — either by the character attempting the Task, or one of the assistants — may be ignored.",
+
+    "Talent.personalEffects": "Personal Effects",
+
+    "Talent.personalEffects.description": "The character possesses some significant and uncommon item or device which is not part of Starfleet’s standard issue, but which is nevertheless useful for missions. The character may select one item with an Opportunity Cost of 2, or two items with an Opportunity Cost of 1 each. Neither items may have an Escalation Cost greater than 1.",
 
     "Talent.pointDefenseSystem": "Point Defense System",
 
