Updated Suliban neck

--- a/WebTools/src/i18n/locales/de/translations.json
+++ b/WebTools/src/i18n/locales/de/translations.json
@@ -1013,6 +1013,7 @@
     "UniformEra.klingon": "Klingonische Rüstung",
     "UniformEra.lowerDecks": "Lower Decks",
     "UniformEra.monsterMaroon": "Der Zorn des Khan",
+    "UniformEra.nextGeneration": "Das Nächste Jahrhundert",
     "UniformEra.originalSeries": "Originalserie",
     "UniformEra.originalSeriesKlingon": "Klingonen (Originalserie)",
     "UniformEra.romulan": "Romulaner",
